working on semantic and resp. design

--- a/index.css
+++ b/index.css
@@ -7,26 +7,11 @@
     font-family: 'Roboto', sans-serif;
   }
   
-
-  
-  .hidden {
-    display: none;
-  }
-  
-
-  
   .container {
     max-width: 600px;
     margin: 0 auto;
+    padding-top: 40px;
   }
 
   
-  #toast {
-    width: 100vw;
-    background-color: #8fb7e3;
-    position: absolute;
-    display: none;
-    text-align: center;
-    margin: 0 auto;
-    padding: 15px;
-  } 
+ 
