--- a/index.css
+++ b/index.css
@@ -5,18 +5,29 @@
   
   body {
     font-family: 'Roboto', sans-serif;
-    background-color: white;
+   
   }
-  
+  form{
+    max-width: 100%;
+    display: block;
+  }
   .container {
-    max-width: 1000px;
-    margin: 0 auto;
+    width: 100%;
+    /* margin: 0 auto; */
     padding-top: 40px;
     
   }
 
-  li{
-    border:5px;
+  .js-book-mark-title {
+    margin-top:5px;
   }
-  
+  .js-book-mark-url{
+margin-top:5px;
+  } 
+  .js-book-mark-description{
+    margin-top:5px;
+  } 
+  .book-mark-rating{
+    margin-top:5px;
+  }
  
