--- a/index.css
+++ b/index.css
@@ -5,19 +5,27 @@
   
   body {
     font-family: 'Roboto', sans-serif;
-   
+    background-color: #14e4f7;
+    margin-left:30px;
+    margin-bottom:10%;
+  
+  }
+
+  h1{
+    text-align:center;
   }
   form{
-    max-width: 100%;
+    width: 90%;
     display: block;
   }
   .container {
-    width: 100%;
-    /* margin: 0 auto; */
+ 
     padding-top: 40px;
     
   }
-
+  li{
+    list-style-type:none;
+    }
   .js-book-mark-title {
     margin-top:5px;
   }
@@ -31,3 +39,57 @@ margin-top:5px;
     margin-top:5px;
   }
  
+.book-mark-list {
+display: block;
+
+}
+
+.filter-drop-down{
+  margin-top:20px;
+  display: block;
+
+}
+
+form input[type=text] {
+  display: block;
+  width:100%;
+}
+input[type=button] {
+  display: block;
+  font-weight:bold;
+  margin-bottom:10px;
+}
+
+button{
+  height:30px;
+  font-weight:bold;
+}
+
+select{
+  width:40px;
+}
+
+.add-button{
+margin-left:10px;
+
+}
+ .error-message{
+
+  font-weight:bold;
+  color: red;
+ }
+
+
+  /* Non-mobile, grid */
+  @media only screen and (min-width: 800px) {
+ body
+    {
+    background-color:yellow;
+  }
+  form input[type=text]{
+     display: inline;
+     width:18%;
+    }
+
+
+  }
